fix: landing spacing and capitalization

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 }
 
 #landing {
-  height: 75vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
